compiler/grammar.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On LET shift to state 90
-- On IF shift to state 96
-- On ID shift to state 99
-- On BREAK shift to state 20
-- On stmt shift to state 105
-- On program shift to state 107
## Reductions:

State 1:
## Known stack suffix:
## WHILE
## LR(1) items:
stmt -> WHILE . expr LBRACE stmt RBRACE [ SEMICOLON RBRACE EOF ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On expr shift to state 88
## Reductions:

State 2:
## Known stack suffix:
## PRINT
## LR(1) items:
stmt -> PRINT . LPAREN expr RPAREN [ SEMICOLON RBRACE EOF ]
## Transitions:
-- On LPAREN shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## PRINT LPAREN
## LR(1) items:
stmt -> PRINT LPAREN . expr RPAREN [ SEMICOLON RBRACE EOF ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On expr shift to state 86
## Reductions:

State 4:
## Known stack suffix:
## NUM
## LR(1) items:
expr -> NUM . [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND
--   reduce production expr -> NUM

State 5:
## Known stack suffix:
## LET
## LR(1) items:
expr -> LET . ID COLON type_parse ASSIGN expr IN expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> LET . ID COLON type_parse ASSIGN expr [ SEMICOLON ]
## Transitions:
-- On ID shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## LET ID
## LR(1) items:
expr -> LET ID . COLON type_parse ASSIGN expr IN expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> LET ID . COLON type_parse ASSIGN expr [ SEMICOLON ]
## Transitions:
-- On COLON shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## LET ID COLON
## LR(1) items:
expr -> LET ID COLON . type_parse ASSIGN expr IN expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> LET ID COLON . type_parse ASSIGN expr [ SEMICOLON ]
## Transitions:
-- On SHORT shift to state 8
-- On LONG shift to state 9
-- On INT shift to state 10
-- On CHAR shift to state 11
-- On BOOL shift to state 12
-- On type_parse shift to state 13
## Reductions:

State 8:
## Known stack suffix:
## SHORT
## LR(1) items:
type_parse -> SHORT . [ LBRACE ASSIGN ARROW ]
## Transitions:
## Reductions:
-- On LBRACE ASSIGN ARROW
--   reduce production type_parse -> SHORT

State 9:
## Known stack suffix:
## LONG
## LR(1) items:
type_parse -> LONG . [ LBRACE ASSIGN ARROW ]
## Transitions:
## Reductions:
-- On LBRACE ASSIGN ARROW
--   reduce production type_parse -> LONG

State 10:
## Known stack suffix:
## INT
## LR(1) items:
type_parse -> INT . [ LBRACE ASSIGN ARROW ]
## Transitions:
## Reductions:
-- On LBRACE ASSIGN ARROW
--   reduce production type_parse -> INT

State 11:
## Known stack suffix:
## CHAR
## LR(1) items:
type_parse -> CHAR . [ LBRACE ASSIGN ARROW ]
## Transitions:
## Reductions:
-- On LBRACE ASSIGN ARROW
--   reduce production type_parse -> CHAR

State 12:
## Known stack suffix:
## BOOL
## LR(1) items:
type_parse -> BOOL . [ LBRACE ASSIGN ARROW ]
## Transitions:
## Reductions:
-- On LBRACE ASSIGN ARROW
--   reduce production type_parse -> BOOL

State 13:
## Known stack suffix:
## LET ID COLON type_parse
## LR(1) items:
expr -> LET ID COLON type_parse . ASSIGN expr IN expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> LET ID COLON type_parse . ASSIGN expr [ SEMICOLON ]
type_parse -> type_parse . ARROW type_parse [ ASSIGN ARROW ]
## Transitions:
-- On ASSIGN shift to state 14
-- On ARROW shift to state 74
## Reductions:

State 14:
## Known stack suffix:
## LET ID COLON type_parse ASSIGN
## LR(1) items:
expr -> LET ID COLON type_parse ASSIGN . expr IN expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> LET ID COLON type_parse ASSIGN . expr [ SEMICOLON ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On expr shift to state 83
## Reductions:

State 15:
## Known stack suffix:
## IF
## LR(1) items:
expr -> IF . expr THEN expr ELSE expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> IF . expr THEN stmt [ SEMICOLON ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On expr shift to state 77
## Reductions:

State 16:
## Known stack suffix:
## ID
## LR(1) items:
expr -> ID . [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> ID . ASSIGN expr [ SEMICOLON ]
## Transitions:
-- On ASSIGN shift to state 17
## Reductions:
-- On TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND
--   reduce production expr -> ID

State 17:
## Known stack suffix:
## ID ASSIGN
## LR(1) items:
stmt -> ID ASSIGN . expr [ SEMICOLON RBRACE EOF ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On expr shift to state 76
## Reductions:

State 18:
## Known stack suffix:
## FTMLK
## LR(1) items:
expr -> FTMLK . LPAREN exprlist RPAREN COLON type_parse LBRACE expr RBRACE [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
## Transitions:
-- On LPAREN shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## FTMLK LPAREN
## LR(1) items:
expr -> FTMLK LPAREN . exprlist RPAREN COLON type_parse LBRACE expr RBRACE [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On exprlist shift to state 61
-- On expr shift to state 71
## Reductions:

State 20:
## Known stack suffix:
## BREAK
## LR(1) items:
stmt -> BREAK . [ SEMICOLON RBRACE EOF ]
## Transitions:
## Reductions:
-- On SEMICOLON RBRACE EOF
--   reduce production stmt -> BREAK

State 21:
## Known stack suffix:
## stmt
## LR(1) items:
expr -> stmt . SEMICOLON expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> stmt . SEMICOLON stmt [ SEMICOLON ]
## Transitions:
-- On SEMICOLON shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## stmt SEMICOLON
## LR(1) items:
expr -> stmt SEMICOLON . expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> stmt SEMICOLON . stmt [ SEMICOLON ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 23
-- On expr shift to state 24
## Reductions:

State 23:
## Known stack suffix:
## stmt SEMICOLON stmt
## LR(1) items:
expr -> stmt . SEMICOLON expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
stmt -> stmt . SEMICOLON stmt [ SEMICOLON ]
stmt -> stmt SEMICOLON stmt . [ SEMICOLON ]
## Transitions:
## Reductions:
-- On SEMICOLON
--   reduce production stmt -> stmt SEMICOLON stmt

State 24:
## Known stack suffix:
## stmt SEMICOLON expr
## LR(1) items:
expr -> expr . LPAREN exprlist RPAREN [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . PLUS expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . MINUS expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . TIMES expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . DIVIDE expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . MODULO expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . EQ expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . NEQ expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . LT expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . LE expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . GT expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . GE expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . AND expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . OR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . BOR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . BAND expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . BXOR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . SHL expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . SHR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> stmt SEMICOLON expr . [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
## Transitions:
-- On TIMES shift to state 25
-- On SHR shift to state 27
-- On SHL shift to state 37
-- On PLUS shift to state 29
-- On OR shift to state 39
-- On NEQ shift to state 41
-- On MODULO shift to state 31
-- On MINUS shift to state 35
-- On LT shift to state 43
-- On LE shift to state 45
-- On GT shift to state 47
-- On GE shift to state 49
-- On EQ shift to state 51
-- On DIVIDE shift to state 33
-- On BXOR shift to state 53
-- On BOR shift to state 57
-- On BAND shift to state 55
-- On AND shift to state 59
## Reductions:
-- On THEN SEMICOLON RPAREN RBRACE LPAREN LBRACE IN EOF ELSE COMMA
--   reduce production expr -> stmt SEMICOLON expr

State 25:
## Known stack suffix:
## expr TIMES
## LR(1) items:
expr -> expr TIMES . expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On expr shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## expr TIMES expr
## LR(1) items:
expr -> expr . LPAREN exprlist RPAREN [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . PLUS expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . MINUS expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . TIMES expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr TIMES expr . [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . DIVIDE expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . MODULO expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . EQ expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . NEQ expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . LT expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . LE expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . GT expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . GE expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . AND expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . OR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . BOR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . BAND expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . BXOR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . SHL expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
expr -> expr . SHR expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND
--   reduce production expr -> expr TIMES expr

State 27:
## Known stack suffix:
## expr SHR
## LR(1) items:
expr -> expr SHR . expr [ TIMES THEN SHR SHL SEMICOLON RPAREN RBRACE PLUS OR NEQ MODULO MINUS LT LPAREN LE LBRACE IN GT GE EQ EOF ELSE DIVIDE COMMA BXOR BOR BAND AND ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINT shift to state 2
-- On NUM shift to state 4
-- On LET shift to state 5
-- On IF shift to state 15
-- On ID shift to state 16
-- On FTMLK shift to state 18
-- On BREAK shift to state 20
-- On stmt shift to state 21
-- On expr shift to state 28
## Reductions:
